--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<h5>Input two peoples names to calculate the love....</h5>
 				<form role="form" class="form-horizontal">
 						<div class="form-group">
-								<input type="text" class="form-control" name="names" placeholder="Name One" />
+								<input type="text" class="form-control" name="names" placeholder="Test" />
 						</div>
 						<div class="form-group">
 								<input type="text" class="form-control" name="names" placeholder="Name Two" />
