--- a/index.html
+++ b/index.html
@@ -36,10 +36,8 @@
 		</div>
 	</div>
 	  
-	  <video width="320" height="240" controls>
-		  <source src="movie.mp4"  type="video/mp4">
-		  <source src="movie.ogg"  type="video/ogg">
-		  您的浏览器不支持 HTML5 video 标签。
+	  <video controls>
+		  <source src="example.mp4"  type="video/mp4">
 	  </video>
 </div>
   
