--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="container">
 	
 	  
-	  <video controls>
+	  <video controls="controls">
 		  <source src="example.mp4"  type="video/mp4">
 	  </video>
   </div>
