--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>special cert award</title>
+		<!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
+		<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
 	</head>
 	<body>
 		<pre>
@@ -11,10 +13,10 @@
 		<input type="text" id="prize">
 		请输入日期：
 		<input type="date" id="day"> -->
-		<input type="button" value="接受颁奖吧" id="submit">
+		<input type="button" class="btn btn-primary" value="接受颁奖吧" id="submit" >
 		</pre>
 		<pre>
-		    <canvas style="background-color: #fff;visibility: hidden;" id="myCanVas" width="600" height="865">不好意思！！您的浏览器不支持canvas标签</canvas>
+		    <canvas class="container" style="background-color: #fff;visibility: hidden;" id="myCanVas" width="600" height="865">不好意思！！您的浏览器不支持canvas标签</canvas>
 		</pre>
 		
 		<script type="text/javascript">
